code push setup added

--- a/android/app/src/development/res/values/strings.xml
+++ b/android/app/src/development/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Mio</string>
+    <string moduleConfig="true" name="CodePushDeploymentKey">DmvkQOTxex3XPvQBvfuaiKYiYFGgVJQQdm4fr</string>
 </resources>
