--- a/android/app/src/production/res/values/strings.xml
+++ b/android/app/src/production/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Mio</string>
+    <string moduleConfig="true" name="CodePushDeploymentKey">4LpEzjWJOdHJyPUlWer1KQbzzESHyda3GV4mE</string>
 </resources>
